# Open-kaka-robot

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/pink_slave_urdf/: CMakeLists.txt  package.xml
configs/: master_left.yaml  master_right.yaml  slave_left.yaml  slave_right.yaml  teleop_joint_gains.yaml  teleop_mapping.yaml
configs/joint_limits/: pink_master_limits.yaml  pink_slave_limits.yaml
configs/zeros/: pink_master_zero.yaml  pink_slave_zero.yaml
docs/: github_upload_zh.md  safety_zh.md  v0_scope_zh.md
robot_core/: __init__.py
robot_core/apps/: __init__.py  debug_tool_gui.py
robot_core/drivers/: __init__.py  damiao_driver.py  feetech_driver.py
robot_core/services/: __init__.py  arm_read_service.py  hardware_zero_service.py  joint_limit_service.py  safety_service.py  single_joint_motion_service.py  teleop_gain_config.py  teleop_mapping_config.py  teleop_service.py  zero_service.py
robot_core/utils/: __init__.py  damiao_read_only.py  feetech_sts_read_only.py
robot_core/visualization/: __init__.py  socket_protocol.py  urdf_light.py
scripts/apps/: start_debug_tool.py
scripts/read_arms/: __init__.py  read_arm_status.py  read_master_gray.py  read_master_pink.py  read_slave_gray.py  read_slave_pink.py
scripts/teleop/: 01_pink_real_slave_dry_run.py  02_pink_single_joint_follow_with_limit.py  03_pink_single_joint_test_plan.py  04_read_pink_slave_motor_params.py  05_joint3_mit_tuning_console.py  06_pink_single_joint_zero_delta_follow.py  07_pink_multi_joint_zero_delta_follow.py  08_pink_tau_direction_probe.py  09_pink_tau_tuning_console.py
(+23 files in other folders)
